* improved log4j schema with async appender in addition to the async logger * set the minimal JDK version to 21 because it's LTS. * more improvements.
Signed-off-by: roy ash <roy.ash@moovit.com>