@@ -8,7 +8,6 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.json.JsonMapper;
 import io.github.ashr123.timeMeasurement.Result;
 import io.github.ashr123.timeMeasurement.TimeMeasurement;
-import io.github.ashr123.timeMeasurement.TimeScales;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -49,20 +48,20 @@ import java.util.stream.Stream;
 		versionProvider = Listener.class,
 		showDefaultValues = true,
 		description = "An App that can get \"red alert\"s from IDF's Home Front Command.")
-public class Listener implements Runnable, CommandLine.IVersionProvider
-{
-	private static final TypeReference<List<District>> LIST_TYPE_REFERENCE = new TypeReference<>()
-	{
+public class Listener implements Runnable, CommandLine.IVersionProvider {
+	private static final TypeReference<List<District>> LIST_TYPE_REFERENCE = new TypeReference<>() {
 	};
 	private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern(FixedDateFormat.FixedFormat.DEFAULT.getPattern(), Locale.getDefault(Locale.Category.FORMAT)).withZone(ZoneId.systemDefault());
 	private static final Logger LOGGER = LogManager.getLogger();
 	private static final ObjectMapper JSON_MAPPER = new JsonMapper()
 			.enable(SerializationFeature.INDENT_OUTPUT)
+			.enable(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS)
 			.disable(DeserializationFeature.READ_DATE_TIMESTAMPS_AS_NANOSECONDS)
 			.findAndRegisterModules();
 	private static final Configuration DEFAULT_CONFIGURATION = new Configuration(
 			false,
 			false,
+			true,
 			true,
 			false,
 			Duration.ofMillis(10000),
@@ -89,53 +88,49 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 	 */
 	private volatile Map<String, AreaTranslationProtectionTime> districts;
 
-	private Listener()
-	{
+	private Listener() {
 	}
 
-	public static void main(String... args)
-	{
-		System.exit(new CommandLine(Listener.class)
+	public static void main(String... args) {
+		new CommandLine(Listener.class)
 				.setCaseInsensitiveEnumValuesAllowed(true)
-				.execute(args));
+				.execute(args);
 	}
 
-	private static void setLoggerLevel(Level level)
-	{
+	private static void setLoggerLevel(Level level) {
 		final LoggerContext loggerContext = (LoggerContext) LogManager.getContext(false);
 		loggerContext.getConfiguration().getLoggerConfig(LOGGER.getName()).setLevel(level);
 		loggerContext.updateLoggers();
 	}
 
-	private static void printHelpMsg()
-	{
+	private static void printHelpMsg() {
 		System.err.println("Enter \"t\" for sound test, \"c\" for clearing the screen, \"r\" for refresh the districts translation dictionary, \"q\" to quit or \"h\" for displaying this help massage.");
 	}
 
-	private static void sleep()
-	{
-		try
-		{
+	private static void sleep() {
+		try {
 			Thread.sleep(1000);
-		} catch (InterruptedException interruptedException)
-		{
+		} catch (InterruptedException interruptedException) {
 			//noinspection CallToPrintStackTrace
 			interruptedException.printStackTrace(); // TODO think about
 		}
 	}
 
-	private static Set<String> getTranslations(Collection<AreaTranslationProtectionTime> translatedData)
-	{
+	private static Set<String> getTranslations(Collection<IAreaTranslationProtectionTime> translatedData) {
 		return translatedData.parallelStream().unordered()
-				.map(AreaTranslationProtectionTime::translation)
+				.map(IAreaTranslationProtectionTime::translation)
 				.collect(Collectors.toSet());
 	}
 
-	private String areaAndTranslatedDistrictsToString(Map<String, List<AreaTranslationProtectionTime>> districtsByAreaName, int cat)
-	{
-		return  districtsByAreaName.entrySet().parallelStream().unordered()
+	private String areaAndTranslatedDistrictsToString(CharSequence headline, Map<String, List<AreaTranslationProtectionTime>> districtsByAreaName, int cat) {
+		final Function<AreaTranslationProtectionTime, String> toString = cat == 1 || cat == 101 ?
+				areaTranslationProtectionTime -> areaTranslationProtectionTime.translation() + " (" + configuration.languageCode().getTimeTranslation(areaTranslationProtectionTime.protectionTimeInSeconds()) + ")" :
+				AreaTranslationProtectionTime::translation;
+		return districtsByAreaName.entrySet().parallelStream().unordered()
+				.sorted(Map.Entry.comparingByKey())
 				.map(areaNameAndDistricts -> areaNameAndDistricts.getValue().parallelStream().unordered()
-						.map(areaTranslationProtectionTime -> areaTranslationProtectionTime.translation() + (cat == 1 || cat == 101 ? " (" + areaTranslationProtectionTime.protectionTimeInSeconds() + " " + configuration.languageCode().getSecondsTranslation() + ")" : ""))
+						.map(toString)
+						.sorted()
 						.collect(Collectors.joining(
 								"," + System.lineSeparator() + "\t\t",
 								areaNameAndDistricts.getKey() + ":" + System.lineSeparator() + "\t\t",
@@ -143,8 +138,8 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 						)))
 				.collect(Collectors.joining(
 						"," + System.lineSeparator() + "\t",
-						"\t",
-						""
+						headline + ":" + System.lineSeparator() + "\t",
+						System.lineSeparator()
 				));
 	}
 
@@ -170,17 +165,13 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 					converter = LoggerLevelConverter.class,
 					description = "Level of logger. Valid values: OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL (case insensitive).")
 			Level loggerLevel
-	) throws IOException, InterruptedException
-	{
-		try (InputStream ignored = System.in)
-		{
-			System.out.println(JSON_MAPPER.writeValueAsString(startSubcommandInputThread(
-					languageCode,
-					timeout,
-					loggerLevel,
-					District::label
-			)));
-		}
+	) throws IOException, InterruptedException {
+		System.out.println(JSON_MAPPER.writeValueAsString(startSubcommandInputThread(
+				languageCode,
+				timeout,
+				loggerLevel,
+				District::label
+		)));
 	}
 
 	@CommandLine.Command(name = "get-remote-districts-as-json-to-file",
@@ -210,24 +201,20 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 					converter = LoggerLevelConverter.class,
 					description = "Level of logger. Valid values: OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL (case insensitive).")
 			Level loggerLevel
-	) throws IOException, InterruptedException
-	{
-		try (InputStream ignored = System.in)
-		{
-			JSON_MAPPER.writeValue(
-					file,
-					startSubcommandInputThread(
-							languageCode,
-							timeout,
-							loggerLevel,
-							district -> new AreaTranslationProtectionTime(
-									district.areaname(),
-									district.label(),
-									district.migun_time()
-							)
-					)
-			);
-		}
+	) throws IOException, InterruptedException {
+		JSON_MAPPER.writeValue(
+				file,
+				startSubcommandInputThread(
+						languageCode,
+						timeout,
+						loggerLevel,
+						district -> new AreaTranslationProtectionTime(
+								district.areaname(),
+								district.label(),
+								district.migun_time()
+						)
+				)
+		);
 	}
 
 	private <D> Map<String, D> startSubcommandInputThread(
@@ -235,23 +222,17 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 			long timeout,
 			Level level,
 			Function<District, D> districtMapper
-	) throws InterruptedException
-	{
+	) throws InterruptedException {
 		final CountDownLatch startSignal = new CountDownLatch(1);
-		new Thread(() ->
-		{
-			try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8))
-			{
+		Thread.startVirtualThread(() -> {
+			try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8)) {
 				System.err.println("Enter \"q\" to quit");
 				startSignal.countDown();
 				while (isContinue)
-					switch (scanner.nextLine().strip())
-					{
-						case "" ->
-						{
+					switch (scanner.nextLine().strip()) {
+						case "" -> {
 						}
-						case "q" ->
-						{
+						case "q" -> {
 							System.err.println("Quiting...");
 							isContinue = false;
 						}
@@ -259,10 +240,9 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 								Unrecognized command!
 								Enter "q" to quit""");
 					}
-			} catch (NoSuchElementException ignored)
-			{
+			} catch (NoSuchElementException ignored) {
 			}
-		}).start();
+		});
 		setLoggerLevel(level);
 		startSignal.await();
 		return loadRemoteDistricts(languageCode, Duration.ofMillis(timeout), districtMapper);
@@ -272,15 +252,11 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 			LanguageCode languageCode,
 			Duration timeout,
 			Function<District, T> districtMapper
-	)
-	{
+	) {
 		LOGGER.info("Getting districts from IDF's Home Front Command's server...");
-		while (isContinue)
-		{
-			try
-			{
-				final Result<Map<String, T>> result = TimeMeasurement.measureAndExecuteCallable(() ->
-				{
+		while (isContinue) {
+			try {
+				final Result<Map<String, T>> result = TimeMeasurement.measureAndExecuteCallable(() -> {
 					final HttpResponse<InputStream> httpResponse = HTTP_CLIENT.send(
 							HttpRequest.newBuilder(URI.create("https://www.oref.org.il/Shared/Ajax/GetDistricts.aspx?lang=" + languageCode.name().toLowerCase(Locale.ROOT)))
 									.header("Accept", "application/json")
@@ -288,8 +264,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 									.build(),
 							HttpResponse.BodyHandlers.ofInputStream()
 					);
-					try (InputStream body = httpResponse.body())
-					{
+					try (InputStream body = httpResponse.body()) {
 						if (httpResponse.statusCode() >= 200 && httpResponse.statusCode() < 300)
 							return JSON_MAPPER.readValue(
 											/*VAR_ALL_DISTRICTS.matcher(httpResponse.*/body/*()).replaceFirst("")*/,
@@ -299,8 +274,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 									.collect(Collectors.toMap(
 											District::label_he,
 											districtMapper,
-											(value1, value2) ->
-											{
+											(value1, value2) -> {
 												LOGGER.trace("value1: {}, value2: {}", value1, value2);
 												return value2;
 											}
@@ -309,18 +283,15 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 					LOGGER.error("Got bad response status code: {}", httpResponse.statusCode());
 					return Collections.emptyMap();
 				});
-				if (result.getResult().isEmpty())
-				{
+				if (result.getResult().isEmpty()) {
 					sleep();
 					continue;
 				}
-				LOGGER.info("Done (took {} seconds, got {} districts)", result.getTimeTaken(TimeScales.SECONDS), result.getResult().size());
+				LOGGER.info("Done (took {} milliseconds, got {} districts)", result.getTimeTaken(), result.getResult().size());
 				return result.getResult();
-			} catch (JsonParseException e)
-			{
+			} catch (JsonParseException e) {
 				LOGGER.error("JSON parsing error: {}", e.toString());
-			} catch (Exception e)
-			{
+			} catch (Exception e) {
 				LOGGER.debug("Failed to get data for language code {}: {}. Trying again...", languageCode, e.toString());
 			}
 			sleep();
@@ -328,24 +299,20 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 		return Collections.emptyMap();
 	}
 
-	private void printDistrictsNotFoundWarning()
-	{
+	private void printDistrictsNotFoundWarning() {
 		if (!districtsNotFound.isEmpty())
 			LOGGER.warn("Those districts don't exist: {}", districtsNotFound);
 	}
 
 	@Override
-	public String[] getVersion()
-	{
+	public String[] getVersion() {
 		return new String[]{"Red Alert Listener v" + getClass().getPackage().getImplementationVersion()};
 	}
 
-	private void loadConfiguration() throws IOException
-	{
+	private void loadConfiguration() throws IOException {
 		final long configurationLastModifiedTemp = configurationFile.lastModified();
 		final LanguageCode oldLanguageCode = configuration.languageCode();
-		if (configurationLastModifiedTemp > configurationLastModified)
-		{
+		if (configurationLastModifiedTemp > configurationLastModified) {
 			LOGGER.info("(Re)Loading configuration from file \"{}\"", configurationFile);
 			configuration = JSON_MAPPER.readValue(configurationFile, Configuration.class);
 			configurationLastModified = configurationLastModifiedTemp;
@@ -358,8 +325,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 					.toList();
 			printDistrictsNotFoundWarning();
 			setLoggerLevel(configuration.logLevel());
-		} else if (configurationLastModifiedTemp == 0 && configurationLastModified != 0)
-		{
+		} else if (configurationLastModifiedTemp == 0 && configurationLastModified != 0) {
 			LOGGER.warn("couldn't find \"{}\", using default configuration", configurationFile);
 			configuration = DEFAULT_CONFIGURATION;
 			if (districts == null || !oldLanguageCode.equals(configuration.languageCode()))
@@ -371,32 +337,24 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 	}
 
 	@Override
-	public void run()
-	{
+	public void run() {
 		System.err.println("Preparing Red Alert Listener v" + getClass().getPackage().getImplementationVersion() + "...");
 		try (Clip clip = AudioSystem.getClip(Stream.of(AudioSystem.getMixerInfo()).parallel().unordered()
 				.filter(mixerInfo -> COLLATOR.equals(mixerInfo.getName(), "default [default]"))
 				.findAny()
 				.orElse(null));
 			 AudioInputStream audioInputStream = AudioSystem.getAudioInputStream(new BufferedInputStream(Objects.requireNonNull(getClass().getResourceAsStream("/alarmSound.wav"))));
-			 ScheduledExecutorService scheduledExecutorService = Executors.newSingleThreadScheduledExecutor();
-			 InputStream in = System.in)
-		{
+			 ScheduledExecutorService scheduledExecutorService = Executors.newSingleThreadScheduledExecutor()) {
 			clip.open(audioInputStream);
-			new Thread(() ->
-			{
-				try (Scanner scanner = new Scanner(in, StandardCharsets.UTF_8))
-				{
+			Thread.startVirtualThread(() -> {
+				try (Scanner scanner = new Scanner(System.in, StandardCharsets.UTF_8)) {
 					printHelpMsg();
 					while (isContinue)
-						switch (scanner.nextLine().strip())
-						{
-							case "" ->
-							{
+						switch (scanner.nextLine().strip()) {
+							case "" -> {
 							}
 							case "q", "quit", "exit" -> isContinue = false;
-							case "t", "test", "test-sound" ->
-							{
+							case "t", "test", "test-sound" -> {
 								System.err.println("Testing sound...");
 								clip.setFramePosition(0);
 								clip.start();
@@ -404,17 +362,15 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 							case "c", "clear" -> System.err.println("\033[H\033[2JListening...");
 							case "r", "refresh", "refresh-districts" -> refreshDistrictsTranslation();
 							case "h", "help" -> printHelpMsg();
-							default ->
-							{
+							default -> {
 								System.err.println("Unrecognized command!");
 								printHelpMsg();
 							}
 						}
-				} catch (NoSuchElementException ignored)
-				{
+				} catch (NoSuchElementException ignored) {
 				}
 				System.err.println("Bye Bye!");
-			}).start();
+			});
 			scheduledExecutorService.scheduleAtFixedRate(this::refreshDistrictsTranslation, 1, 1, TimeUnit.DAYS);
 			loadConfiguration();
 			final URI uri = URI.create("https://www.oref.org.il/WarningMessages/alert/alerts.json");
@@ -425,8 +381,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 			final double alarmSoundSecondLength = clip.getMicrosecondLength() / 1E6;
 			System.err.println("Listening...");
 			while (isContinue)
-				try
-				{
+				try {
 					loadConfiguration();
 					final HttpResponse<InputStream> httpResponse = HTTP_CLIENT.send(
 							HttpRequest.newBuilder(uri)
@@ -438,10 +393,8 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 							HttpResponse.BodyHandlers.ofInputStream()
 					);
 
-					try (InputStream body = httpResponse.body())
-					{
-						if (httpResponse.statusCode() < 200 || httpResponse.statusCode() >= 300)
-						{
+					try (InputStream body = httpResponse.body()) {
+						if (httpResponse.statusCode() < 200 || httpResponse.statusCode() >= 300) {
 							LOGGER.error("Connection response status code: {}", httpResponse.statusCode());
 							sleep();
 							continue;
@@ -453,8 +406,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 						else if ((alertsLastModified = httpResponse.headers().firstValue("Last-Modified")
 								.map(lastModifiedStr -> DateTimeFormatter.RFC_1123_DATE_TIME.parse(lastModifiedStr, Instant::from))
 								.filter(currAlertsLastModified::isBefore)
-								.orElse(null)) != null)
-						{
+								.orElse(null)) != null) {
 							currAlertsLastModified = alertsLastModified;
 
 							final RedAlertEvent redAlertEvent = JSON_MAPPER.readValue(
@@ -464,8 +416,7 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 							LOGGER.debug("Original event data: {}", redAlertEvent);
 							// TODO rethink of what defines a drill alert
 							if (redAlertEvent.data().parallelStream().unordered()
-									.allMatch(LanguageCode.HE::containsTestKey))
-							{
+									.allMatch(LanguageCode.HE::containsTestKey)) {
 								if (configuration.isShowTestAlerts())
 									System.out.println(redAlertToString(
 											contentLength,
@@ -473,64 +424,78 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 											redAlertEvent,
 											redAlertEvent.data().parallelStream().unordered()
 													.map(configuration.languageCode()::getTestTranslation)
+													.sorted()
 													.collect(Collectors.joining(
 															"," + System.lineSeparator() + "\t",
-															"\t",
-															""
+															"Test Alert:" + System.lineSeparator() + "\t",
+															System.lineSeparator()
 													)),
-											new StringBuilder("Test Alert").append(System.lineSeparator())
+											new StringBuilder()
 									));
 								continue;
 							}
 
-							List<AreaTranslationProtectionTime> translatedData = filterPrevAndGetTranslatedData(redAlertEvent, prevData);
+							List<? extends IAreaTranslationProtectionTime> translatedData = filterPrevAndGetTranslatedData(redAlertEvent, prevData);
 
-							if (translatedData.contains(null))
-							{
+							boolean isContainsMissingTranslations = translatedData.parallelStream().unordered().anyMatch(MissingAreaTranslationProtectionTime.class::isInstance);
+							if (isContainsMissingTranslations) {
 								LOGGER.warn("There is at least one district that couldn't be translated, refreshing districts translations from server...");
 								refreshDistrictsTranslation();
 								translatedData = filterPrevAndGetTranslatedData(redAlertEvent, prevData);
-								if (translatedData.contains(null))
+								//noinspection AssignmentUsedAsCondition
+								if (isContainsMissingTranslations = translatedData.parallelStream().unordered().anyMatch(MissingAreaTranslationProtectionTime.class::isInstance))
 									LOGGER.warn("There is at least one district that couldn't be translated after districts refreshment");
 							}
 
-							final Map<String, List<AreaTranslationProtectionTime>>
-									unseenTranslatedDistricts = translatedData.parallelStream().unordered()
+							final Map<String, List<AreaTranslationProtectionTime>> unseenTranslatedDistricts = translatedData.parallelStream().unordered()
 									.distinct() // TODO think about
-									.filter(Objects::nonNull)
-									.collect(Collectors.groupingBy(AreaTranslationProtectionTime::translatedAreaName)), // to know if new (unseen) districts were added from previous request.
-									newDistrictsOfInterest = unseenTranslatedDistricts.values().parallelStream().unordered()
-											.map(Collection::parallelStream)
-											.flatMap(Stream::unordered)
-											.filter(translationAndProtectionTime -> configuration.districtsOfInterest().contains(translationAndProtectionTime.translation()))
-											.collect(Collectors.groupingBy(AreaTranslationProtectionTime::translatedAreaName)); // for not restarting alert sound unnecessarily
+									.filter(AreaTranslationProtectionTime.class::isInstance)
+									.map(AreaTranslationProtectionTime.class::cast)
+									.collect(Collectors.groupingBy(AreaTranslationProtectionTime::translatedAreaName)); // to know if new (unseen) districts were added from previous request
 
-							if (configuration.isMakeSound() && (configuration.isAlertAll() || !newDistrictsOfInterest.isEmpty()))
-								newDistrictsOfInterest.values().parallelStream().unordered()
-										.map(Collection::parallelStream)
-										.flatMap(Stream::unordered)
-										.mapToInt(AreaTranslationProtectionTime::protectionTimeInSeconds)
-										.max()
-										.ifPresent(maxProtectionTime ->
-										{
-											clip.setFramePosition(0);
-											//noinspection NumericCastThatLosesPrecision
-											clip.loop(Math.max(1, (int) Math.round(maxProtectionTime / alarmSoundSecondLength)));
-										});
-//						final Set<String> unseenTranslatedStrings = getTranslations(unseenTranslatedDistricts);
 							final StringBuilder output = new StringBuilder();
 							if (configuration.isDisplayResponse() && !unseenTranslatedDistricts.isEmpty())
 								redAlertToString(
 										contentLength,
 										currAlertsLastModified,
 										redAlertEvent,
-										areaAndTranslatedDistrictsToString(unseenTranslatedDistricts, redAlertEvent.cat()),
+										areaAndTranslatedDistrictsToString("Translated Areas and Districts", unseenTranslatedDistricts, redAlertEvent.cat()),
 										output
 								);
+							if (configuration.isDisplayUntranslatedDistricts() && isContainsMissingTranslations) {
+								output.append(translatedData.parallelStream().unordered()
+										.distinct() // TODO think about
+										.filter(MissingAreaTranslationProtectionTime.class::isInstance)
+										.map(IAreaTranslationProtectionTime::translation)
+										.sorted()
+										.collect(Collectors.joining(
+												"," + System.lineSeparator() + "\t",
+												"Untranslated Districts:" + System.lineSeparator() + "\t",
+												System.lineSeparator()
+										)));
+							}
 
-							if (!newDistrictsOfInterest.isEmpty())
-								output.append("ALERT ALERT ALERT:").append(System.lineSeparator())
-										.append(areaAndTranslatedDistrictsToString(newDistrictsOfInterest, redAlertEvent.cat())).append(System.lineSeparator());
+							if (configuration.isMakeSound() || configuration.isAlertAll()) {
+								final Map<String, List<AreaTranslationProtectionTime>> districtsForAlert = unseenTranslatedDistricts.values().parallelStream().unordered()
+										.map(Collection::parallelStream)
+										.flatMap(Stream::unordered)
+										.filter(translationAndProtectionTime -> configuration.districtsOfInterest().contains(translationAndProtectionTime.translation()))
+										.collect(Collectors.groupingBy(AreaTranslationProtectionTime::translatedAreaName)); // for not restarting alert sound unnecessarily
+								if (!districtsForAlert.isEmpty()) {
+									districtsForAlert.values().parallelStream().unordered()
+											.map(Collection::parallelStream)
+											.flatMap(Stream::unordered)
+											.mapToInt(AreaTranslationProtectionTime::protectionTimeInSeconds)
+											.max()
+											.ifPresent(maxProtectionTime -> {
+												clip.setFramePosition(0);
+												//noinspection NumericCastThatLosesPrecision
+												clip.loop(Math.max(1, (int) Math.round(maxProtectionTime / alarmSoundSecondLength)));
+											});
+									output.append(areaAndTranslatedDistrictsToString("ALERT ALERT ALERT", districtsForAlert, redAlertEvent.cat()));
+								}
+							}
+
 							if (!output.isEmpty())
 								System.out.println(output);
 
@@ -538,25 +503,26 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 							prevData = new HashSet<>(redAlertEvent.data());
 						}
 					}
-				} catch (JsonParseException e)
-				{
+				} catch (JsonParseException e) {
 					LOGGER.error("JSON parsing error: {}", e.toString());
-				} catch (IOException e)
-				{
+				} catch (IOException e) {
 					LOGGER.debug("Got exception: {}", e.toString());
 					sleep();
 				}
-		} catch (Throwable e)
-		{
+		} catch (Throwable e) {
 			LOGGER.fatal("Closing connection and exiting...", e);
 		}
 	}
 
-	private List<AreaTranslationProtectionTime> filterPrevAndGetTranslatedData(RedAlertEvent redAlertEvent, Set<String> prevData)
-	{
+	private List<? extends IAreaTranslationProtectionTime> filterPrevAndGetTranslatedData(RedAlertEvent redAlertEvent, Set<String> prevData) {
 		return redAlertEvent.data().parallelStream().unordered()
 				.filter(Predicate.not(prevData::contains))
-				.map(districts::get)
+				.map(key -> {
+					final AreaTranslationProtectionTime areaTranslationProtectionTime = districts.get(key);
+					return areaTranslationProtectionTime == null ?
+							new MissingAreaTranslationProtectionTime(key) :
+							areaTranslationProtectionTime;
+				})
 				.toList();
 	}
 
@@ -564,18 +530,15 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 										   TemporalAccessor alertsLastModified,
 										   RedAlertEvent redAlertEvent,
 										   String translatedData,
-										   StringBuilder output)
-	{
+										   StringBuilder output) {
 		return output.append("Translated Title: ").append(configuration.languageCode().getTitleTranslation(redAlertEvent.cat(), redAlertEvent.title())).append(System.lineSeparator())
 				.append("Content Length: ").append(contentLength).append(" bytes").append(System.lineSeparator())
 				.append("Last Modified Date: ").append(DATE_TIME_FORMATTER.format(alertsLastModified)).append(System.lineSeparator())
 				.append("Current Date: ").append(DATE_TIME_FORMATTER.format(Instant.now())).append(System.lineSeparator())
-				.append("Translated Areas and Districts:").append(System.lineSeparator())
-				.append(translatedData).append(System.lineSeparator());
+				.append(translatedData);
 	}
 
-	private void refreshDistrictsTranslation()
-	{
+	private void refreshDistrictsTranslation() {
 		districts = loadRemoteDistricts(
 				configuration.languageCode(),
 				configuration.timeout(),
@@ -587,168 +550,9 @@ public class Listener implements Runnable, CommandLine.IVersionProvider
 		);
 	}
 
-	// https://www.oref.org.il/Shared/ClientScripts/WarningMessages/WarningMessages.js catVsImageAudioAlertName
-	@SuppressWarnings("unused")
-	private enum LanguageCode
-	{
-		HE(
-				Map.ofEntries(
-						Map.entry("בדיקה", "בדיקה"),
-						Map.entry("בדיקה מחזורית", "בדיקה מחזורית")
-				),
-				null,
-				"שניות"
-		),
-		EN(
-				Map.ofEntries(
-						Map.entry("בדיקה", "Test"),
-						Map.entry("בדיקה מחזורית", "Periodic Test")
-				),
-				Map.ofEntries(
-						Map.entry(1, "Rocket and missile fire"),
-						Map.entry(3, "Earthquake"),
-						Map.entry(4, "Radiological event"),
-						Map.entry(5, "Fear of a tsunami"),
-						Map.entry(6, "Hostile aircraft intrusion"),
-						Map.entry(7, "Hazardous Materials Event"),
-						Map.entry(13, "Terrorist infiltration"),
-						Map.entry(101, "Rocket and missile fire drill"),
-						Map.entry(103, "Earthquake drill"),
-						Map.entry(104, "Home Front Command radiologic drill"),
-						Map.entry(105, "Tsunami drill"),
-						Map.entry(106, "Home Front Command drill"),
-						Map.entry(107, "Hazardous Materials drill"),
-						Map.entry(113, "Terrorist infiltration drill")
-				),
-				"seconds"
-		),
-		AR(
-				Map.ofEntries(
-						Map.entry("בדיקה", "فحص"),
-						Map.entry("בדיקה מחזורית", "فحص الدوري")
-				),
-				Map.ofEntries(
-						Map.entry(1, "اطلاق قذائف وصواريخ"),
-						Map.entry(3, "هزّة أرضية"),
-						Map.entry(4, "حدث إشعاعي"),
-						Map.entry(5, "تحسبا للتسونامي"),
-						Map.entry(6, "اختراق طائرة معادية"),
-						Map.entry(7, "حدث مواد خطرة"),
-						Map.entry(13, "تسلل مخربين"),
-						Map.entry(101, "تمرين اطلاق قذائف وصواريخ"),
-						Map.entry(103, "تمرين هزّة أرضية"),
-						Map.entry(104, "قيادة الجبهة الداخلية تدريب اشعاعي"),
-						Map.entry(105, "تمرين تسونامي"),
-						Map.entry(106, "قيادة الجبهة الداخلية تدريب"),
-						Map.entry(107, "تمرين مواد خطرة"),
-						Map.entry(113, "تمرين تسلل مخربين")
-				),
-				"ثواني"
-		),
-		RU(
-				Map.ofEntries(
-						Map.entry("בדיקה", "Проверка"),
-						Map.entry("בדיקה מחזורית", "Периодическая Проверка")
-				),
-				Map.ofEntries(
-						Map.entry(1, "Ракетный обстрел"),
-						Map.entry(3, "Землетрясение"),
-						Map.entry(4, "Радиоактивная опасность"),
-						Map.entry(5, "Угроза цунами"),
-						Map.entry(6, "Нарушение воздушного пространства"),
-						Map.entry(7, "Утечка опасных веществ"),
-						Map.entry(13, "Проникновение террористов"),
-						Map.entry(101, "Учения по ракетному обстрелу"),
-						Map.entry(103, "Учения на случай землетрясения"),
-						Map.entry(104, "Командование тыла - учения при опасности применения радиологического оружия"),
-						Map.entry(105, "Учения на случай цунами"),
-						Map.entry(106, "Командование тыла - военные учения"),
-						Map.entry(107, "Учения на случай утечки опасных веществ"),
-						Map.entry(113, "Учения на случай проникновения террористов")
-				),
-				"секунды"
-		);
-		private final Map<String, String> testDistrictTranslations;
-		private final Map<Integer, String> titleTranslations;
-		private final String secondsTranslation;
-
-		LanguageCode(Map<String, String> testDistrictTranslations, Map<Integer, String> titleTranslations, String secondsTranslation)
-		{
-			this.testDistrictTranslations = testDistrictTranslations;
-			this.titleTranslations = titleTranslations;
-			this.secondsTranslation = secondsTranslation;
-		}
-
-		public boolean containsTestKey(String key)
-		{
-			return testDistrictTranslations.containsKey(key);
-		}
-
-		public String getTestTranslation(String key)
-		{
-			return testDistrictTranslations.get(key);
-		}
-
-		public String getTitleTranslation(int categoryCode, String defaultTitleTranslation)
-		{
-			return titleTranslations == null ?
-					defaultTitleTranslation :
-					Optional.ofNullable(titleTranslations.get(categoryCode))
-							.orElseGet(() -> defaultTitleTranslation + " (translation doesn't exist)");
-		}
-
-		public String getSecondsTranslation()
-		{
-			return secondsTranslation;
-		}
-	}
-
-	private record RedAlertEvent(
-			int cat,
-			List<String> data,
-			String desc,
-			long id,
-			String title
-	)
-	{
-	}
-
-	private record Configuration(
-			boolean isMakeSound,
-			boolean isAlertAll,
-			boolean isDisplayResponse,
-			boolean isShowTestAlerts,
-			Duration timeout,
-			LanguageCode languageCode,
-			Level logLevel,
-			Set<String> districtsOfInterest
-	)
-	{
-	}
-
-	private record District(
-			String label,
-			String value,
-			int id,
-			int areaid,
-			String areaname,
-			String label_he,
-			int migun_time
-	)
-	{
-	}
-
-	private record AreaTranslationProtectionTime(String translatedAreaName,
-												 String translation,
-												 int protectionTimeInSeconds)
-	{
-	}
-
-	private static class LoggerLevelConverter implements CommandLine.ITypeConverter<Level>
-	{
+	private static class LoggerLevelConverter implements CommandLine.ITypeConverter<Level> {
 		@Override
-		public Level convert(String value)
-		{
+		public Level convert(String value) {
 			return Level.valueOf(value);
 		}
 	}
